# autodeafenplus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  requirements.txt
.forgejo/workflows/: build-latest.yaml
include/: keycodes.h
src/: bridge.py  main.cpp
